--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,10 @@ body {
   float: right;
   width: 17rem;
 }
+/*Disable image right-click */
+img {
+  pointer-events: none;
+}
 
 /* menu */
 .header .menu {
@@ -245,6 +249,27 @@ h1 {
 
 /* Screen sizes 1024px and up */
 @media (min-width: 1024px) {
+  /*Back to top button */
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 14px;
+    border: none;
+    outline: none;
+    background-color: grey;
+    opacity: 50%;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+
+  #myBtn:hover {
+    background-color: #555;
+  }
   .container {
     width: 100%;
   }
