--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,6 @@ h1 {
 
 /*Back to top button */
 #myBtn {
-  display: none;
 }
 
 /* Screen sizes 1024px and up */
@@ -276,22 +275,71 @@ h1 {
   #myBtn {
     display: none;
     position: fixed;
-    bottom: 20px;
+    bottom: 65px;
     right: 30px;
     z-index: 99;
     font-size: 14px;
     border: none;
     outline: none;
     background-color: grey;
-    opacity: 50%;
+    opacity: 30%;
     color: white;
     cursor: pointer;
     padding: 15px;
     border-radius: 4px;
+
+    animation: fadeIn ease-in 1s;
+    -webkit-animation: fadeIn ease-in 1s;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0.3;
+    }
+  }
+
+  @-moz-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0.3;
+    }
+  }
+
+  @-webkit-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0.3;
+    }
+  }
+
+  @-o-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0.3;
+    }
+  }
+
+  @-ms-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0.3;
+    }
   }
 
   #myBtn:hover {
     background-color: #555;
+    transition: 0.2s ease-out;
   }
   .container {
     width: 100%;
