--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 
 body {
   text-transform: uppercase;
-  background: #f4f4f4;
   margin: 0;
   font-family: "Raleway";
   font-weight: 300;
@@ -58,9 +57,8 @@ body {
 
 /* new menu section */
 .header {
-  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
-  padding-bottom: 1.5rem;
-  padding-top: 1.5rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
   background: white;
   display: inline-block;
   width: 100%;
@@ -194,6 +192,8 @@ h1 {
 }
 
 .gallery {
+  padding-top: 0.3rem;
+
   margin: auto;
   width: 100%;
   text-align: center;
@@ -206,7 +206,11 @@ h1 {
 }
 
 hr {
-  display: none;
+  display: block;
+  padding: 0;
+  margin-bottom: -0.05rem;
+  margin-top: -0.3rem;
+  opacity: 30%;
 }
 
 h1 {
@@ -260,81 +264,11 @@ h1 {
   padding-bottom: 1rem;
 }
 
-/*Back to top button */
-#myBtn {
-}
-
 /* Screen sizes 1024px and up */
-@media (min-width: 1024px) {
+@media (min-width: 1280px) {
   #stock-links a {
     display: inline-block;
     text-align: center;
-  }
-
-  /*Back to top button */
-  #myBtn {
-    display: none;
-    position: fixed;
-    bottom: 65px;
-    right: 30px;
-    z-index: 99;
-    font-size: 14px;
-    border: none;
-    outline: none;
-    background-color: grey;
-    opacity: 30%;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
-
-    animation: fadeIn ease-in 1s;
-    -webkit-animation: fadeIn ease-in 1s;
-  }
-
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0.3;
-    }
-  }
-
-  @-moz-keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0.3;
-    }
-  }
-
-  @-webkit-keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0.3;
-    }
-  }
-
-  @-o-keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0.3;
-    }
-  }
-
-  @-ms-keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0.3;
-    }
   }
 
   #myBtn:hover {
@@ -484,6 +418,7 @@ h1 {
     background: white;
     display: inline-block;
     width: 100%;
+    margin-bottom: 0rem;
   }
 
   .header {
@@ -500,12 +435,16 @@ h1 {
     float: right;
     text-align: right;
     padding-right: 1rem;
+    padding-left: 0;
   }
 
   body {
     background: #fff;
   }
 
+  .instagram {
+    padding-top: 0.1rem;
+  }
   .header .logo {
     background-color: white;
     display: block;
@@ -516,8 +455,37 @@ h1 {
     width: 18rem;
     left: 0;
     background-color: white;
-    padding-top: 0.8rem;
+    padding-top: 0.7rem;
     padding-right: 0rem;
     position: sticky;
+  }
+
+  .backToTop {
+    display: none;
+    position: fixed;
+    bottom: 57px;
+    right: 50px;
+    font-size: 3em;
+    z-index: 9999;
+    height: 50px;
+    width: 50px;
+    background-color: grey;
+    opacity: 30%;
+    text-align: center;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  .backToTop i {
+    position: absolute;
+    top: 0px;
+    left: 10px;
+    color: #fff;
+  }
+  .backToTop i:hover {
+    color: #aaa;
+  }
+
+  #container {
+    height: 900px;
   }
 }
