--- a/css/style.css
+++ b/css/style.css
@@ -29,20 +29,24 @@ body {
   padding-top: 1rem;
 }
 
-.banner {
+.mobile-banner {
   width: 100%;
   text-align: center;
+  display: block;
 }
 
-.banner img {
-  margin-top: 2rem;
-  width: 90%;
-  background: grey;
+.desktop-banner {
+  display: none;
+}
+.mobile-banner img {
+  width: 100%;
+  height: 73vh;
+  object-fit: cover;
+  background-color: grey;
 }
 .copyright {
-  margin-top: 2rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  margin-top: 1rem;
+
   background: white;
   width: 100%;
   text-align: left;
@@ -340,12 +344,6 @@ h1 {
     opacity: 30%;
   }
 
-  .banner img {
-    margin: 0;
-    width: 100%;
-    background: #fff;
-  }
-
   #about {
     padding-bottom: 17vh;
   }
@@ -377,9 +375,22 @@ h1 {
     display: none;
   }
 
-  .banner {
+  .mobile-banner {
+    display: none;
+  }
+  .desktop-banner {
     margin: auto;
     width: 100%;
+    display: block;
+  }
+
+  .desktop-banner img {
+    margin: 0;
+    width: 100%;
+    background: #fff;
+    height: 88vh;
+    object-fit: cover;
+    object-position: 100% 25%;
   }
 
   .copyright {
