--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ body {
   width: 100%;
   text-align: center;
   display: block;
+  -webkit-transform: translatez(0);
+  -moz-transform: translatez(0);
+  -ms-transform: translatez(0);
+  -o-transform: translatez(0);
+  transform: translatez(0);
 }
 
 .desktop-banner {
@@ -42,8 +47,11 @@ body {
   width: 100%;
   height: 73vh;
   object-fit: cover;
-  background-color: grey;
-  object-position: 10% -30%;
+  -webkit-transform: translatez(0);
+  -moz-transform: translatez(0);
+  -ms-transform: translatez(0);
+  -o-transform: translatez(0);
+  transform: translatez(0);
 }
 .copyright {
   margin-top: 1rem;
@@ -383,6 +391,11 @@ h1 {
     margin: auto;
     width: 100%;
     display: block;
+    -webkit-transform: translatez(0);
+    -moz-transform: translatez(0);
+    -ms-transform: translatez(0);
+    -o-transform: translatez(0);
+    transform: translatez(0);
   }
 
   .desktop-banner img {
@@ -392,6 +405,11 @@ h1 {
     height: 88vh;
     object-fit: cover;
     object-position: 100% 25%;
+    -webkit-transform: translatez(0);
+    -moz-transform: translatez(0);
+    -ms-transform: translatez(0);
+    -o-transform: translatez(0);
+    transform: translatez(0);
   }
 
   .copyright {
