--- a/images/test/Ronda Tourism Website/css/layout.css
+++ b/images/test/Ronda Tourism Website/css/layout.css
@@ -162,6 +162,7 @@
 @media only screen and (max-width: 767px) {
   #portfoliolist .portfolio {
     width: 100%;
+    height: auto;
     margin: auto;
   }
 
