--- a/images/test/Ronda Tourism Website/css/stylesheet.css
+++ b/images/test/Ronda Tourism Website/css/stylesheet.css
@@ -5,20 +5,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap");
 * {
   /* box-sizing: border-box;*/
+  -webkit-tap-highlight-color: transparent; /* This stops mobile borders on elements */
 }
 
 /* mobile first design */
 html {
   margin: 0;
+  width: 100vw;
 }
 
 body {
   margin: 0;
-  /* font-family: "Raleway", sans-serif;*/
-  /* font-family: "Lato", sans-serif;*/
   font-family: "Helvetica", sans-serif;
+  position: absolute; 
 }
 
+/*Container Styling */
 .container {
   width: 100%;
   margin: auto;
@@ -47,8 +49,6 @@ body {
 }
 
 /* Header styling */
-
-/* new menu section */
 .header {
   background: #333;
   /*font-family: Hoefler Text, Baskerville Old Face, Garamond, Times New Roman, serif; */
@@ -56,20 +56,20 @@ body {
   width: 100%;
   padding-top: 0rem;
   height: auto;
+  padding-bottom: 5vh;
 }
 
 .header .logo {
-  position: relative;
   font: italic normal normal 1.4rem "libre baskerville", serif;
   color: #94703a;
   font-size: 1.7rem;
   text-decoration: none;
-  text-align: center;
-  width: 20rem;
+  text-align: right;
+  width: 100%;
   margin-top: -0.3rem;
-  margin-left: 10rem;
 }
 
+/*
 .header .logo img {
   width: 50%;
   margin-right: 5rem;
@@ -81,102 +81,7 @@ body {
   text-align: right;
   width: 23rem;
 }
-
-/* Inner menu */
-.header ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  overflow: hidden;
-  display: block;
-}
-
-.header ul li {
-  display: block;
-}
-
-.header li {
-  font-size: 2rem;
-  text-align: left;
-  margin-bottom: 0.5rem;
-  margin-top: 1rem;
-}
-
-.header li a {
-  display: block;
-  width: 100%;
-  text-align: left;
-  margin-top: 0.5rem;
-  margin-bottom: 0;
-  margin-left: 1.3rem;
-  margin-right: 1rem;
-  /*border-right: 1px solid #f4f4f4;*/
-  text-decoration: none;
-  color: white;
-}
-
-/* Dropdown Button from w3 */
-.dropbtn li a {
-  text-align: left;
-  margin-top: 2rem;
-  margin-bottom: 0;
-  margin-left: 1.3rem;
-  margin-right: 1.3rem;
-  /*border-right: 1px solid #f4f4f4;*/
-  text-decoration: none;
-  color: white;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: white;
-  padding: 0.7rem 0.7rem;
-  font-size: 1.5rem;
-  margin-left: 2rem;
-  text-decoration: none;
-  display: block;
-  background-color: #333;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  z-index: 100;
-  display: none;
-  position: relative;
-  background-color: #333;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 1.1rem 0rem 0rem 0rem;
-}
-
-.dropbtn {
-  width: 100vw;
-}
-
-.dropbtn {
-  background-color: #333;
-  color: white;
-  border: none;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: block;
-  z-index: 100;
-}
-
-/* Change color of dropdown links on hover 
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
 */
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
 .header .language {
   margin-left: 0rem;
   margin-right: 0rem;
@@ -202,12 +107,105 @@ body {
   color: white;
 }
 
+/* Inner menu */
+.header ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  display: block;
+}
+
+.header ul li {
+  display: block;
+}
+
+.header li {
+  font-size: 1.5rem;
+  text-align: left;
+  margin-bottom: 0.5rem;
+  margin-top: 1rem;
+}
+
+.header li a {
+  display: block;
+  width: 100%;
+  text-align: left;
+  margin-top: 2rem;
+  margin-bottom: 0;
+  margin-left: 1.3rem;
+  margin-right: 1rem;
+  /*border-right: 1px solid #f4f4f4;*/
+  text-decoration: none;
+  color: white;
+}
+
+/* Dropdown Menu */
+
+/* Links inside the dropdown */
+#menu-dropdown-submenu a {
+  padding: 0.7rem 0.7rem;
+  font-size: 1.2rem;
+  text-decoration: none;
+  display: block;
+  background-color: #333;
+  margin-bottom: 0;
+  margin-right: 1.3rem;
+  margin-left: 1.3rem;
+  /*border-right: 1px solid #f4f4f4;*/
+  text-decoration: none;
+  color: white;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.menu-dropdown-submenu {
+  z-index: 100;
+  display: none;
+  position: relative;
+  background-color: #333;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 1.1rem 0rem 0rem 0rem;
+}
+
+.dropbtn {
+  width: 100vw;
+}
+
+.dropbtn {
+  background-color: #333;
+  color: white;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.menu-dropdown {
+  position: relative;
+  display: block;
+  z-index: 100;
+}
+
+/* Change color of dropdown links on hover 
+#menu-dropdown-submenu a:hover {
+  background-color: #ddd;
+}
+*/
+
+/* Show the dropdown menu on hover */
+#menu-dropdown-submenu {
+  display: none;
+}
+
+.menu-dropdown:hover #menu-dropdown-submenu {
+  display: block;
+}
+
+/*Mobile Menu Styling */
+
 /* menu */
 .header .menu {
   clear: both;
   max-height: 0;
-  transition: max-height 0.2s ease-out;
-  vertical-align: center;
 }
 
 /* menu icon */
@@ -219,7 +217,7 @@ body {
   vertical-align: center;
 }
 
-/* Burger menu */
+/* Hamburger menu */
 .header .menu-icon .navicon {
   background: white;
   display: block;
@@ -248,10 +246,12 @@ body {
 
 .header .menu-icon .navicon:after {
   top: -6px;
+  
 }
 
 .header .menu-btn {
   display: none;
+  
 }
 
 .header .menu-btn:checked ~ .menu {
@@ -275,6 +275,7 @@ body {
   top: 0;
 }
 
+/*Text Boxes */
 #text-box {
   padding-top: 1rem;
   text-align: center;
@@ -400,6 +401,17 @@ body {
   padding-bottom: 20px;
 }
 
+#map-embed {
+  text-align:center;
+  width:100vw;
+  padding-bottom:2rem;
+}
+
+#map-frame {
+  height:50vh;
+  width:6000px;
+}
+
 #image-1-box {
   margin: auto;
   text-align: center;
@@ -436,6 +448,19 @@ body {
   padding-bottom: 0rem;
 }
 
+#blog-banner {
+  z-index: -5;
+}
+
+#blog-banner img {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin: auto;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+}
+
 #homepage-quote {
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -461,13 +486,12 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-
-  margin-top: 0.6rem;
 }
 
 #footer-text p {
+  font-size:0.7rem;
   margin: 0;
-  padding-top: 0.8rem;
+  padding-top: 0.5rem;
   color: white;
 }
 
@@ -806,9 +830,7 @@ h4 {
     margin: 0 auto;
   }
 
-  .header ul {
-    overflow: visible;
-  }
+
 
   .header .menu-icon {
     display: none;
@@ -822,10 +844,21 @@ h4 {
     margin-top: 0.4rem;
     margin-right: 4rem;
     margin-left: 0rem;
-
     font-size: 2rem;
     padding-bottom: 2rem;
     text-decoration: none;
+  }
+
+  .header .logo img {
+    font: italic normal normal 1.4rem "libre baskerville", serif;
+    color: #94703a;
+    font-size: 1.7rem;
+    text-decoration: none;
+    text-align: right;
+    margin-right: 0;
+    padding-left: 1rem;
+    margin-right: 5rem;
+    width: 18rem;
   }
 
   .header .instagram a {
@@ -855,24 +888,6 @@ h4 {
     right: 1rem;
   }
 
-  .header .logo img {
-    font: italic normal normal 1.4rem "libre baskerville", serif;
-    color: #94703a;
-    font-size: 1.7rem;
-    text-decoration: none;
-    text-align: right;
-
-    margin-right: 0;
-    padding-left: 1rem;
-    margin-right: 5rem;
-    width: 18rem;
-  }
-
-  .menu {
-    float: right;
-    text-align: center;
-  }
-
   .header li {
     font-size: 1.3rem;
     text-align: center;
@@ -884,14 +899,15 @@ h4 {
     font-weight: 400;
   }
 
+  /* Top menu styling */
   .header li a {
     display: block;
     width: 100%;
     text-align: left;
     margin-top: 0.5rem;
     margin-bottom: 0;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
     /*border-right: 1px solid #f4f4f4;*/
     text-decoration: none;
     color: white;
@@ -904,6 +920,8 @@ h4 {
   .header .menu {
     display: inline-flex;
     max-height: none;
+    float: right;
+    text-align: center;
   }
 
   .grid {
@@ -1011,15 +1029,41 @@ h4 {
     z-index: 100;
   }
 
+ 
   /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
+  #menu-dropdown-submenu {
     z-index: 100;
     display: none;
     position: relative;
     background-color: #333;
-    min-width: 160px;
+    min-width: 100%;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 1.1rem 0rem 0rem 0rem;
+    max-height: 0px;
+
+  }
+
+  .header ul {
+    overflow: visible;
+  }
+
+  .header ul:hover ~ #menu-dropdown-submenu{
+    overflow: visible;
+    opacity: 0.9;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+  }
+
+  .menu-dropdown:hover > .header ul{
+    {
+      max-height: 1000px;
+      opacity: 1;
+
+  }
+
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .#menu-dropdown-submenu {
   }
 
   /* Dropdown Button from w3 */
@@ -1035,7 +1079,7 @@ h4 {
   }
 
   /* Links inside the dropdown */
-  .dropdown-content a {
+  #menu-dropdown-submenu a {
     color: white;
     padding: 0.7rem 0.7rem;
     font-size: 1rem;
@@ -1045,12 +1089,72 @@ h4 {
     background-color: #333;
   }
 
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-
   .mobile-drop-icon {
     display: none;
   }
+
+
+
+
+
+
+  .top-menu {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .sub-menu {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    -webkit-transition:  2s ease-in;
+-moz-transition:  2s ease-in;
+-o-transition:  2s ease-in;
+-ms-transition:  2s ease-in;
+transition:  2s ease-in;
+transition: background-color 0.5s ease;
+
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .sub-menu a:hover {background-color: #ddd;
+  }
+
+  .dropdown .top-menu:hover  .sub-menu {display: block;
+    background-color: green;
+
+    -webkit-transition:  2s ;
+-moz-transition:  2s ease-in;
+-o-transition:  2s ease-in;
+-ms-transition:  2s ease-in;
+transition:  2s ease-in; 
+    opacity: 0.3;
+    width: 1000px;
+}
+  
+  .dropdown:hover .top-menu {background-color: #3e8e41;}
+
+
+.box:hover {
+background-color: green;
+cursor: pointer;
+}
+
 }
