--- a/images/test/Ronda Tourism Website/css/stylesheet.css
+++ b/images/test/Ronda Tourism Website/css/stylesheet.css
@@ -450,7 +450,7 @@ body {
 #homepage-banner img {
   display: block;
   width: 100%;
-  height: auto;
+  height: 25rem;
   margin: auto;
   padding-top: 0rem;
   padding-bottom: 0rem;
@@ -912,6 +912,21 @@ html {
 
 .parallax-text-container-grey p {
   width: 100%;
+}
+
+.desktop-banner {
+  display: none;
+}
+
+.mobile-banner img {
+  width: 100%;
+  height: 73vh;
+  object-fit: cover;
+  -webkit-transform: translatez(0);
+  -moz-transform: translatez(0);
+  -ms-transform: translatez(0);
+  -o-transform: translatez(0);
+  transform: translatez(0);
 }
 
 /* Features Styling */
@@ -1522,5 +1537,33 @@ html {
 
   .feature-container img {
     height: 20rem;
+  }
+
+  .mobile-banner {
+    display: none;
+  }
+  .desktop-banner {
+    margin: auto;
+    width: 100%;
+    display: block;
+    -webkit-transform: translatez(0);
+    -moz-transform: translatez(0);
+    -ms-transform: translatez(0);
+    -o-transform: translatez(0);
+    transform: translatez(0);
+  }
+
+  .desktop-banner img {
+    margin: 0;
+    width: 100%;
+    background: #fff;
+    height: 88vh;
+    object-fit: cover;
+    object-position: 100% 25%;
+    -webkit-transform: translatez(0);
+    -moz-transform: translatez(0);
+    -ms-transform: translatez(0);
+    -o-transform: translatez(0);
+    transform: translatez(0);
   }
 }
