--- a/images/test/Ronda Tourism Website/css/stylesheet.css
+++ b/images/test/Ronda Tourism Website/css/stylesheet.css
@@ -31,7 +31,7 @@ body {
 }
 
 .portfolio-container {
-  margin-top: 1.2rem;
+  margin-top: 0.3rem;
 }
 
 .small-container {
@@ -450,7 +450,7 @@ body {
 #homepage-banner img {
   display: block;
   width: 100%;
-  height: 25rem;
+  height: 20rem;
   margin: auto;
   padding-top: 0rem;
   padding-bottom: 0rem;
@@ -874,7 +874,7 @@ html {
   color: #777;
   background-color: white;
   text-align: center;
-  padding: 1rem;
+  padding: 1rem 1rem 0rem 1rem;
   text-align: justify;
   font: 1rem "Lato", sans-serif;
 
@@ -886,7 +886,7 @@ html {
   background-color: #282e34;
   text-align: center;
   text-align: justify;
-  padding: 1rem;
+  padding: 1rem 1rem 0rem 1rem;
   font: 1rem "Lato", sans-serif;
 }
 
@@ -997,22 +997,23 @@ html {
   opacity: 80%;
 }
 
-.feature-item-left:hover img {
-  /* filter: brightness(120%); */
-  transform: scale(1.07);
-  transform-origin: 50% 50%;
+.gallery-menu {
+  margin: 0;
+  text-align: center;
+  padding-top: 1rem;
 }
 
-.feature-item-center:hover img {
-  /* filter: brightness(120%); */
-  transform: scale(1.07);
-  transform-origin: 50% 50%;
-}
-
-.feature-item-right:hover img {
-  /* filter: brightness(120%); */
-  transform: scale(1.07);
-  transform-origin: 50% 50%;
+.gallery-menu a {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: black;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font: 0.6rem "Lato", sans-serif;
+  padding-bottom: 0.5rem;
 }
 
 /*Media Queries */
@@ -1565,5 +1566,52 @@ html {
     -ms-transform: translatez(0);
     -o-transform: translatez(0);
     transform: translatez(0);
+  }
+
+  #homepage-banner {
+  }
+
+  #homepage-banner img {
+    height: 25rem;
+  }
+
+  .feature-item-left:hover img {
+    /* filter: brightness(120%); */
+    transform: scale(1.07);
+    transform-origin: 50% 50%;
+  }
+
+  .feature-item-center:hover img {
+    /* filter: brightness(120%); */
+    transform: scale(1.07);
+    transform-origin: 50% 50%;
+  }
+
+  .feature-item-right:hover img {
+    /* filter: brightness(120%); */
+    transform: scale(1.07);
+    transform-origin: 50% 50%;
+  }
+
+  .gallery-menu {
+    margin: 0;
+    text-align: center;
+    padding-top: 1rem;
+  }
+
+  .gallery-menu a {
+    text-align: center;
+    text-decoration: none;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    color: black;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font: 1rem "Lato", sans-serif;
+    display: inline;
+  }
+
+  .portfolio-container {
+    margin-top: 0.3rem;
   }
 }
